homework2/k8s/configmap.yml
apiVersion: v1
kind: Namespace
metadata:
  name: otus
