homework2/k8s/secret.yml
apiVersion: v1
kind: Namespace
metadata:
  name: otus
