homework2/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: application-service
  namespace: otus
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: otus-homework
