homework2/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress
  namespace: otus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/daniil/(.*)
            pathType: Prefix
            backend:
              service:
                name: application-service
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: application-service
                port:
                  number: 80
